# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  parser.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
